contact page updates

--- a/contact.html
+++ b/contact.html
@@ -178,6 +178,138 @@
             <div class="row">
               <p>Select your region below to view a list of <span class="bold">waterblast dealers</span>.</p>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading-wb-usa">
+                    <h4 class="panel-title">
+                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#wb-usa" aria-expanded="false" aria-controls="wb-usa">
+                        United States <i class="fa fa-plus"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="wb-usa" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-usa">
+                    <div class="dealers-by-region">
+                      <ul class="list-inline">
+                        <li><a href="#wb-ca" class="region">California</a></li>
+                        <li><a href="#wb-fl" class="region">Florida</a></li>
+                        <li><a href="#wb-la" class="region">Louisianna</a></li>
+                        <li><a href="#wb-oh" class="region">Ohio</a></li>
+                        <li><a href="#wb-tx" class="region">Texas</a></li>
+                      </ul>
+                    </div>
+                    <ul class="list-group">
+                      <li class="list-group-item">
+                        <h2 id="wb-ca">California</h2>
+                        <!-- 1st row -->
+                        <div class="row first">
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>O’Connell Jetting</h4>
+                              <p>
+                              <span class="grey">Location:</span> Benicia, California<br/>
+                              <span class="grey">Phone:</span> 800-320-4848<br/>
+                              <span class="grey">Website:</span> <a href="http://www.oconnelljettingsystems.com/" target="_blank">www.oconnelljettingsystems.com</a>
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>Pacific Jetting</h4>
+                              <p>
+                              <span class="grey">Location:</span> Placerville, California<br/>
+                              <span class="grey">Phone:</span> 800-388-9872<br/>
+                              <span class="grey">Website:</span> <a href="http://www.pacificjetting.com/" target="_blank">www.pacificjetting.com</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item">
+                        <h2 id="wb-fl">Florida</h2>
+                        <!-- 1st row -->
+                        <div class="row first">
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>Blasters Ready Jet, Inc.</h4>
+                              <p>
+                              <span class="grey">Location:</span> Tampa, Florida<br/>
+                              <span class="grey">Phone:</span> 813-985-4500<br/>
+                              <span class="grey">Website:</span> <a href="http://www.blasters.net/" target="_blank">www.blasters.net</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item">
+                        <h2 id="wb-la">Louisianna</h2>
+                        <!-- 1st row -->
+                        <div class="row first">
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>La Place Equipment</h4>
+                              <p>
+                              <span class="grey">Location:</span> La Place, Louisianna<br/>
+                              <span class="grey">Phone:</span> 985-652-5210<br/>
+                              <span class="grey">Website:</span> <a href="http://www.h2oblast.com/" target="_blank">www.h2oblast.com</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item">
+                        <h2 id="wb-oh">Ohio</h2>
+                        <!-- 1st row -->
+                        <div class="row first">
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>Blast Technology</h4>
+                              <p>
+                              <span class="grey">Location:</span> N. Royalton, Ohio<br/>
+                              <span class="grey">Phone:</span> 440-237-1160<br/>
+                              <span class="grey">Website:</span> <a href="http://www.blasttechinc.com" target="_blank">www.blasttechinc.com</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item">
+                        <h2 id="wb-tx">Texas</h2>
+                        <!-- 1st row -->
+                        <div class="row first">
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>Advanced Pressure Systems</h4>
+                              <p>
+                              <span class="grey">Location:</span> Tomball, Texas<br/>
+                              <span class="grey">Phone:</span> 281-290-9950<br/>
+                              <span class="grey">Website:</span> <a href="http://www.waterblast.pro/" target="_blank">www.waterblast.pro</a>
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>Jetstream #1521</h4>
+                              <p>
+                              <span class="grey">Location:</span> Houston, Texas<br/>
+                              <span class="grey">Phone:</span> 832-590-1300<br/>
+                              <span class="grey">Website:</span> <a href="http://waterblast.com/" target="_blank">www.waterblast.com</a>
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <div class="dealer">
+                              <h4>PSI Pressure Systems</h4>
+                              <p>
+                              <span class="grey">Location:</span> Baytown, Texas<br/>
+                              <span class="grey">Phone:</span> 281-420-5055<br/>
+                              <span class="grey">Website:</span> <a href="http://www.psipressuresystems.com/" target="_blank">www.psipressuresystems.com</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div><!-- End US Panel -->
                 <div class="panel panel-default dealer-list">
                   <div class="panel-heading" role="tab" id="heading-wb-africa">
                     <h4 class="panel-title">
@@ -449,6 +581,13 @@
                             <span class="grey">Location:</span> Taiwan, ROC<br/>
                             <span class="grey">Phone:</span> (+886) 49 2250172<br/>
                             <span class="grey">Website:</span> <a href="http://www.hyum.com.tw" target="_blank">www.hyum.com.tw</a>
+                            </p>
+                          </div>
+                          <div class="col-sm-4">
+                            <h4>Jian-He International Co., Ltd</h4>
+                            <p>
+                            <span class="grey">Location:</span> Taipei, Taiwan<br/>
+                            <span class="grey">Phone:</span> (+886) 2 27212511
                             </p>
                           </div>
                           <div class="col-sm-4">
@@ -1164,138 +1303,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                     </ul>
                   </div>
                 </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="heading-wb-usa">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#wb-usa" aria-expanded="false" aria-controls="wb-usa">
-                        United States <i class="fa fa-plus"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="wb-usa" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-usa">
-                    <div class="dealers-by-region">
-                      <ul class="list-inline">
-                        <li><a href="#wb-ca" class="region">California</a></li>
-                        <li><a href="#wb-fl" class="region">Florida</a></li>
-                        <li><a href="#wb-la" class="region">Louisianna</a></li>
-                        <li><a href="#wb-oh" class="region">Ohio</a></li>
-                        <li><a href="#wb-tx" class="region">Texas</a></li>
-                      </ul>
-                    </div>
-                    <ul class="list-group">
-                      <li class="list-group-item">
-                        <h2 id="wb-ca">California</h2>
-                        <!-- 1st row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>O’Connell Jetting</h4>
-                              <p>
-                              <span class="grey">Location:</span> Benicia, California<br/>
-                              <span class="grey">Phone:</span> 800-320-4848<br/>
-                              <span class="grey">Website:</span> <a href="http://www.oconnelljettingsystems.com/" target="_blank">www.oconnelljettingsystems.com</a>
-                              </p>
-                            </div>
-                          </div>
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>Pacific Jetting</h4>
-                              <p>
-                              <span class="grey">Location:</span> Placerville, California<br/>
-                              <span class="grey">Phone:</span> 800-388-9872<br/>
-                              <span class="grey">Website:</span> <a href="http://www.pacificjetting.com/" target="_blank">www.pacificjetting.com</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <h2 id="wb-fl">Florida</h2>
-                        <!-- 1st row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>Blasters Ready Jet, Inc.</h4>
-                              <p>
-                              <span class="grey">Location:</span> Tampa, Florida<br/>
-                              <span class="grey">Phone:</span> 813-985-4500<br/>
-                              <span class="grey">Website:</span> <a href="http://www.blasters.net/" target="_blank">www.blasters.net</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <h2 id="wb-la">Louisianna</h2>
-                        <!-- 1st row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>La Place Equipment</h4>
-                              <p>
-                              <span class="grey">Location:</span> La Place, Louisianna<br/>
-                              <span class="grey">Phone:</span> 985-652-5210<br/>
-                              <span class="grey">Website:</span> <a href="http://www.h2oblast.com/" target="_blank">www.h2oblast.com</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <h2 id="wb-oh">Ohio</h2>
-                        <!-- 1st row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>Blast Technology</h4>
-                              <p>
-                              <span class="grey">Location:</span> N. Royalton, Ohio<br/>
-                              <span class="grey">Phone:</span> 440-237-1160<br/>
-                              <span class="grey">Website:</span> <a href="http://www.blasttechinc.com" target="_blank">www.blasttechinc.com</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <h2 id="wb-tx">Texas</h2>
-                        <!-- 1st row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>Advanced Pressure Systems</h4>
-                              <p>
-                              <span class="grey">Location:</span> Tomball, Texas<br/>
-                              <span class="grey">Phone:</span> 281-290-9950<br/>
-                              <span class="grey">Website:</span> <a href="http://www.waterblast.pro/" target="_blank">www.waterblast.pro</a>
-                              </p>
-                            </div>
-                          </div>
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>Jetstream #1521</h4>
-                              <p>
-                              <span class="grey">Location:</span> Houston, Texas<br/>
-                              <span class="grey">Phone:</span> 832-590-1300<br/>
-                              <span class="grey">Website:</span> <a href="http://waterblast.com/" target="_blank">www.waterblast.com</a>
-                              </p>
-                            </div>
-                          </div>
-                          <div class="col-sm-4">
-                            <div class="dealer">
-                              <h4>PSI Pressure Systems</h4>
-                              <p>
-                              <span class="grey">Location:</span> Baytown, Texas<br/>
-                              <span class="grey">Phone:</span> 281-420-5055<br/>
-                              <span class="grey">Website:</span> <a href="http://www.psipressuresystems.com/" target="_blank">www.psipressuresystems.com</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div><!-- End US Panel -->
               </div>
             </div>
           </div>
