new posting and contact page fix

--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
                       <ul class="list-inline">
                         <li><a href="#wb-ca" class="region">California</a></li>
                         <li><a href="#wb-fl" class="region">Florida</a></li>
-                        <li><a href="#wb-la" class="region">Louisianna</a></li>
+                        <li><a href="#wb-la" class="region">Louisiana</a></li>
                         <li><a href="#wb-oh" class="region">Ohio</a></li>
                         <li><a href="#wb-tx" class="region">Texas</a></li>
                       </ul>
@@ -240,14 +240,14 @@
                         </div>
                       </li>
                       <li class="list-group-item">
-                        <h2 id="wb-la">Louisianna</h2>
+                        <h2 id="wb-la">Louisiana</h2>
                         <!-- 1st row -->
                         <div class="row first">
                           <div class="col-sm-4">
                             <div class="dealer">
                               <h4>La Place Equipment</h4>
                               <p>
-                              <span class="grey">Location:</span> La Place, Louisianna<br/>
+                              <span class="grey">Location:</span> La Place, Louisiana<br/>
                               <span class="grey">Phone:</span> 985-652-5210<br/>
                               <span class="grey">Website:</span> <a href="http://www.h2oblast.com/" target="_blank">www.h2oblast.com</a>
                               </p>
