--- a/careers.html
+++ b/careers.html
@@ -104,6 +104,10 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
+              <a href="assets/pdf/jobs/Mechanic-Louisiana_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Louisiana Facility</h4></a>
+                <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
+            </li>
+            <li>
               <a href="assets/pdf/jobs/Large_Assembly_Team_Member_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Large Assembly Team Member</h4></a>
                 <p>This position is responsible for the assembly of our automated equipment required by work orders, including but not limited to inspection of all assemblies assigned by Assembly Supervisor.</p>
             </li>
@@ -116,7 +120,7 @@
                 <p>The Director of Finance and Information Systems oversees StoneAge’s accounting, financial, and IT/IS functions.</p>
             </li>
             <li>
-              <a href="assets/pdf/jobs/Mechanic-12_5_15.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Houston Facility</h4></a>
+              <a href="assets/pdf/jobs/Mechanic-Houston_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Houston Facility</h4></a>
                 <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
             </li>
             <li>
