add inlet to BN9.5

--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -234,7 +234,7 @@
                       </tr>
                       <tr>
                         <th>Inlet Connection</th>
-                        <td colspan="2">M7, 1/16 NPT</td>
+                        <td colspan="2">M7, 1/16 NPT, 1/4 LH/RH MP</td>
                       </tr>
                       <tr>
                         <th>Swivel Diameter</th>
