safety updates, sds

--- a/safety-information.html
+++ b/safety-information.html
@@ -79,11 +79,22 @@
   
   <main class="terms">
     <div class="container">
-      <div class="row">
+      <div class="row bottom-border">
         <div class="col-sm-12 padding-tb-30 text-center">
           <img src="assets/img/safety-warning.jpg" class="img-responsive" alt="Safety warning">
           <h2 class="bold">Operations with waterblast equipment can be potentially hazardous. Caution MUST be exercised prior to and during machine and water jet tool use.</h2>
-          <hr>
+        </div>
+      </div>
+      <div class="row bottom-border padding-tb-30">
+        <div class="col-sm-6 padding-right-60">
+          <h2>Recommendations and Guides</h2>
+          <p><a href="assets/pdf/safety/sa_safety_guidelines_brochure_2015.pdf" target="_blank">Safety Guidelines for StoneAge Equipment</a> » PDF 5 MB</p>
+          <p><a href="assets/pdf/safety/torque_recommend_brochure_2014.pdf" target="_blank">
+High Pressure Fitting Assembly Guidelines and Torque Recommendations</a> » PDF 3 MB</p>
+        </div>
+        <div class="col-sm-6 bg-lt-grey padding-right-60">
+          <h2>Material Safety</h2>
+          <p><a href="safety-data-sheets.html">Safety Data Sheets (SDS)</a></p>
         </div>
       </div>
       <div class="row padding-tb-30">
