--- a/safety-information.html
+++ b/safety-information.html
@@ -85,18 +85,24 @@
           <h2 class="bold">Operations with waterblast equipment can be potentially hazardous. Caution MUST be exercised prior to and during machine and water jet tool use.</h2>
         </div>
       </div>
+      
       <div class="row bottom-border padding-tb-30">
-        <div class="col-sm-6 padding-right-60">
-          <h2>Recommendations and Guides</h2>
-          <p><a href="assets/pdf/safety/sa_safety_guidelines_brochure_2015.pdf" target="_blank">Safety Guidelines for StoneAge Equipment</a> » PDF 5 MB</p>
-          <p><a href="assets/pdf/safety/torque_recommend_brochure_2014.pdf" target="_blank">
-High Pressure Fitting Assembly Guidelines and Torque Recommendations</a> » PDF 3 MB</p>
-        </div>
-        <div class="col-sm-6 bg-lt-grey padding-right-60">
-          <h2>Material Safety</h2>
-          <p><a href="safety-data-sheets.html">Safety Data Sheets (SDS)</a></p>
+          <div class="col-sm-6 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Recommendations and Guides</a>
+              <a href="assets/pdf/safety/sa_safety_guidelines_brochure_2015.pdf" class="list-group-item" target="_blank">Safety Guidelines for StoneAge Equipment</a>
+              <a href="assets/pdf/safety/torque_recommend_brochure_2014.pdf"  class="list-group-item" target="_blank">
+High Pressure Fitting Assembly Guidelines and Torque Recommendations</a>
+            </div>
+          </div>
+          <div class="col-sm-6 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Material Safety</a>
+              <a href="safety-data-sheets.html" class="list-group-item">Safety Data Sheets (SDS)</a>
+          </div>
         </div>
       </div>
+      
       <div class="row padding-tb-30">
         <div class="col-sm-6 padding-right-60">
           <p class="bold">Please read and follow all of these instructions, in addition to the guidelines in the WJTA Recommended Practices handbook, available online at <a href="http://www.wjta.org" target="_blank">www.wjta.org</a>. Deviating from safety instructions and recommended practices can lead to severe injury and/or death.
