--- a/careers.html
+++ b/careers.html
@@ -104,6 +104,14 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
+              <a href="assets/pdf/jobs/Product_Manager_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Product Manager</h4></a>
+                <p>The Product Manager is responsible for managing all aspects of the product planning process across assigned market divisions and ensuring that all assigned product development efforts support the company’s overall strategy and goals.</p>
+            </li>
+            <li>
+              <a href="assets/pdf/jobs/Project_Manager_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Project Manager - Product/Strategy</h4></a>
+                <p>The Project Manager’s primary function will be to provide project management support and communication for New Product Development efforts and Custom Projects.</p>
+            </li>
+            <li>
               <a href="assets/pdf/jobs/Mechanic-Louisiana_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Louisiana Facility</h4></a>
                 <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
             </li>
