HubSpot thank you page update, add LP manual to BRLM

--- a/email-thanks.html
+++ b/email-thanks.html
@@ -73,14 +73,15 @@
   
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading text-center">Thank you for contacting us</h1>
+      <h1 class="page-heading text-center">Thank you for your interest!</h1>
     </div>
   </div>
 
   <section class="container padding-tb-30 margin-bottom-120">
     <div class="col-sm-12 text-center">
-      <h1 class="thin grey spaced margin-bottom-30 width-60">Your e-mail has been sent.</h1>
-      <h3 class="width-60">We will reply promptly to your request.</h3>
+      <h1 class="thin grey spaced margin-bottom-30 width-60">Your request has been sent.</h1>
+      <h3 class="width-60">We will reply promptly to your inquiry.</h3>
+    </div>
   </section>
   
   <!-- Footer CTA -->
