--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -222,6 +222,7 @@ StoneAge Rigid Lance Machines are the industry standard for both horizontal and 
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/manuals/BRLM_500_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/LP-300_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LP-300 Positioner Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
