add dealer, new SDSs

--- a/contact.html
+++ b/contact.html
@@ -1100,6 +1100,16 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                         <div class="row first">
                           <div class="col-sm-4">
                             <div class="dealer">
+                              <h4>America en Triunfo SA de CV</h4>
+                              <p>
+                              <span class="grey">Location:</span> Chihuahua, Mexico<br/>
+                              <span class="grey">Phone:</span> 01 (555) 546 1369<br/>
+                              <span class="grey">Website:</span> <a href="http://www.americaentriunfo.com.mx" target="_blank">www.americaentriunfo.com.mx</a>
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <div class="dealer">
                               <h4>Repindsa</h4>
                               <p>
                               <span class="grey">Location:</span> Veracruz, Mexico<br/>
