--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -80,7 +80,7 @@
   <section class="container padding-tb-30">
     <div class="col-sm-7">
       <p class="grey description">The OSHA Hazard Communication Standard (HCS) requires chemical manufacturers, distributors, or importers to provide Safety Data Sheets (SDSs) (formerly known as Material Safety Data Sheets or MSDSs) to communicate the hazards of hazardous chemical products.</p>      
-    <p><em>Employers must ensure that SDSs are readily accessible to employees.</br>For more information: <a href="http://www.osha.gov">www.osha.gov</a></em></p>
+    <p><em>Employers must ensure that SDSs are readily accessible to employees.<br>For more information: <a href="http://www.osha.gov">www.osha.gov</a></em></p>
     </div>
   </section>
   <section class="container margin-bottom-30">
@@ -128,28 +128,28 @@
           <td>BJ 048-M</td>
           <td>Viscous Fluid, Medium, 6 oz.</td>
           <td>Clearco Products Co., Inc.</td>
-          <td><a href="http://www.clearcoproducts.com/pdf/msds/pure-silicone/MSDS-PSF-5,000cSt_Silicone_Damping_Fluid.pdf" target="_blank">PSF-5,000cSt High Viscosity Silicone Damping Fluid</a></td>
+          <td><a href="assets/pdf/safety/BJ%20048-M%20SDS-PSF-5000cSt%20Silicone%20Fluid.pdf" target="_blank">PSF-5,000cSt High Viscosity Silicone Damping Fluid</a></td>
           <td>High viscosity pure silicone fluid which is a clear, colorless, and odorless linear Polydimethylsiloxane oil. It is characterized by its high damping action; excellent lubricity; inertness to plastics, rubbers, and metals; high dielectric strength; high resistance to shear; thermal stability; wide service temperature range; and low viscosity change at temperature.</td>
         </tr>
         <tr>
           <td>BJ 048-MQ</td>
           <td>Viscous Fluid, Medium, 32 oz.</td>
           <td>Clearco Products Co., Inc.</td>
-          <td><a href="http://www.clearcoproducts.com/pdf/msds/pure-silicone/MSDS-PSF-5,000cSt_Silicone_Damping_Fluid.pdf" target="_blank">PSF-5,000cSt High Viscosity Silicone Damping Fluid</a></td>
+          <td><a href="assets/pdf/safety/BJ%20048-MQ%20SDS-PSF-5000cSt%20Silicone%20Fluid.pdf" target="_blank">PSF-5,000cSt High Viscosity Silicone Damping Fluid</a></td>
           <td>High viscosity pure silicone fluid which is a clear, colorless, and odorless linear Polydimethylsiloxane oil. It is characterized by its high damping action; excellent lubricity; inertness to plastics, rubbers, and metals; high dielectric strength; high resistance to shear; thermal stability; wide service temperature range; and low viscosity change at temperature.</td>
         </tr>
         <tr>
           <td>BJ 048-S</td>
           <td>Viscous Fluid, Slow, 6 oz.</td>
           <td>Clearco Products Co., Inc.</td>
-          <td><a href="http://www.clearcoproducts.com/pdf/msds/pure-silicone/MSDS-PSF-12,500cSt_Silicone_Damping_Fluid.pdf" target="_blank">PSF-12,500cSt High Viscosity Silicone Damping Fluid</a></td>
+          <td><a href="assets/pdf/safety/BJ%20048-S%20-%20SDS-PSF-12500cSt%20Silicone%20Fluid.pdf" target="_blank">PSF-12,500cSt High Viscosity Silicone Damping Fluid</a></td>
           <td>High viscosity pure silicone fluid which is a clear, colorless, and odorless linear Polydimethylsiloxane oil. It is characterized by its high damping action; excellent lubricity; inertness to plastics, rubbers, and metals; high dielectric strength; high resistance to shear; thermal stability; wide service temperature range; and low viscosity change at temperature.</td>
         </tr>
         <tr>
           <td>BJ 048-SQ</td>
           <td>Viscous Fluid, Slow, 32 oz.</td>
           <td>Clearco Products Co., Inc.</td>
-          <td><a href="http://www.clearcoproducts.com/pdf/msds/pure-silicone/MSDS-PSF-12,500cSt_Silicone_Damping_Fluid.pdf" target="_blank">PSF-12,500cSt High Viscosity Silicone Damping Fluid</a></td>
+          <td><a href="assets/pdf/safety/BJ%20048-SQ%20-%20SDS-PSF-12500cSt%20Silicone%20Fluid.pdf" target="_blank">PSF-12,500cSt High Viscosity Silicone Damping Fluid</a></td>
           <td>High viscosity pure silicone fluid which is a clear, colorless, and odorless linear Polydimethylsiloxane oil. It is characterized by its high damping action; excellent lubricity; inertness to plastics, rubbers, and metals; high dielectric strength; high resistance to shear; thermal stability; wide service temperature range; and low viscosity change at temperature.</td>
         </tr>
         <tr>
@@ -169,21 +169,21 @@
           <td>GP 041</td>
           <td>Air Tool Oil, 32 oz.</td>
           <td>Mobil</td>
-          <td><a href="assets/pdf/safety/Mobil-Almo-525-Air-Tool-Oil.pdf" target="_blank">Almo 525 Air Tool Oil</a></td>
+          <td><a href="assets/pdf/safety/GP%20041%20-%20Mobil%20Almo%20525%20SDS_82020.pdf" target="_blank">Almo 525 Air Tool Oil</a></td>
           <td>Oil is formulated from high quality base stocks and additives, which provide chemical stability and protection against wear and corrosion. Oil provides an optimum balance of adhesiveness, yet is emulsifiable enough to pick up moisture which reduces the corrosive and wearing effects of water.</td>
         </tr>
         <tr>
           <td>GP 042</td>
           <td>ATF Lubricant, 32 oz.</td>
           <td>NAPA</td>
-          <td><a href="http://s7d9.scene7.com/is/content/GenuinePartsCompany/725915pdf?$PDF$" target="_blank">Dexron III/ Mercon ATF</a></td>
+          <td><a href="assets/pdf/safety/GP%20042%20-%20Dexron%20III%20-%20Mercon%20ATF%20-%20725981pdf.pdf" target="_blank">Dexron III/ Mercon ATF</a></td>
           <td>A multi-functional automatic transmission fluid with specially selected friction modifiers that allow for friction retention which promotes long life performance.</td>
         </tr>
         <tr>
           <td>GP 043</td>
           <td>Blue Goop, 2 oz.</td>
           <td>Swagelok</td>
-          <td><a href="assets/pdf/safety/Material-Safety-Data-Sheet-Blue-Goop-MSDS-December-2009.pdf" target="_blank">Blue Goop&reg;</a></td>
+          <td><a href="assets/pdf/safety/GP%20043%20-%20Blue%20Goop%20SDS.pdf" target="_blank">Blue Goop&reg;</a></td>
           <td>A multi-functional automatic transmission fluid with specially selected friction modifiers that allow for friction retention which promotes long life performance.</td>
         </tr>
         <tr>
@@ -197,21 +197,21 @@
           <td>GP 044-S</td>
           <td>10W-40 Motor Oil, 32 oz.</td>
           <td>Valvoline</td>
-          <td><a href="assets/pdf/safety/msds_GP_044_S.pdf" target="_blank">Synpower</a></td>
+          <td><a href="assets/pdf/safety/GP%20044-S%20-%20SYNPOWER%205W30%206_1%20QT%20VV955%20United%20States%20(GHS)%20-%20English.pdf" target="_blank">Synpower</a></td>
           <td>A unique blend of premium synthetic and conventional base oils with advanced additive technology.</td>
         </tr>
         <tr>
           <td>GP 045</td>
           <td>Grease Cartridge, Water-resistant</td>
           <td>Houghton International, Inc.</td>
-          <td><a href="assets/pdf/safety/msds_GP_045.pdf" target="_blank">AquaShield</a></td>
+          <td><a href="assets/pdf/safety/GP%20045%20-%2013069323-M_AQUASHIELD_AGHS%20SDS-EN.pdf" target="_blank">AquaShield</a></td>
           <td>AquaShield is a multi-purpose lubricant and sealant that is compounded specifically to cling to metal and “O” ring surfaces, provide long term lubrication and rust protection. It is designed to seal out water and contaminants.</td>
         </tr>
         <tr>
           <td>GP 046</td>
           <td>Gear Lube, 32 oz.</td>
           <td>Valvoline</td>
-          <td><a href="assets/pdf/safety/Valvoline-SAE-80W-90.pdf" target="_blank">High Performance Gear Oil</a></td>
+          <td><a href="assets/pdf/safety/GP%20046%20-%20VALVOLINE%20HP%20GEAR%20OIL%2080W90%20PL%205%20GA%20VV838%20United%20States%20(GHS)%20-%20English.pdf" target="_blank">High Performance Gear Oil</a></td>
           <td>High performance gear oil which is a thermally stable, extreme-pressure gear lubricant that tolerates severe temperatures and shock loading while providing excellent anti-wear, anti-scuffing and corrosion protection.</td>
         </tr>
         <tr>
@@ -225,21 +225,21 @@
           <td>GP 048</td>
           <td>Grease Cartridge, White Grease</td>
           <td>Mobil</td>
-          <td><a href="assets/pdf/safety/MOBIL-SHC-GREASE-460-WT-GP-048.pdf" target="_blank">Mobilith SHC PM 460</a></td>
+          <td><a href="assets/pdf/safety/GP%20048%20-%20Mobilith%20SHC%20PM%20460%20-%20SDS_602860.pdf" target="_blank">Mobilith SHC PM 460</a></td>
           <td>Mobilith SHC 460 is an NLGI 1.5 Grade grease with ISO VG 460 synthetic base fluid and is an extreme pressure grease recommended for tough industrial and marine applications. It provides outstanding bearing protection under heavy loads at low-to-moderate speeds and in applications where water resistance is a critical factor. The recommended operating temperature range is -30º C to 150ºC.</td>
         </tr>
         <tr>
           <td>GP 146</td>
           <td>Gear Lube, Synthetic, 32 oz.</td>
           <td>Exxon Mobil</td>
-          <td><a href="assets/pdf/safety/mobil-SHC-634-GP-146.pdf" target="_blank">Mobilith SHC 634</a></td>
+          <td><a href="assets/pdf/safety/GP%20146%20-%20Mobil%20SHC%20634-%20SDS_85444.pdf" target="_blank">Mobilith SHC 634</a></td>
           <td>Mobil SHC 634 synthetic gear oil is a performance gear and bearing oil designed to provide outstanding equipment protection, oil life and problem free operation to enable increased customer productivity.</td>
         </tr>
         <tr>
           <td>GP 180</td>
           <td>Loctite, 242 Blue, .5 mL</td>
           <td>Loctite</td>
-          <td><a href="http://hybris.cms.henkel.com/henkel/msdspdf?country=US&language=EN&matnr=230718" target="_blank">242 Blue Threadlocker</a></td>
+          <td><a href="assets/pdf/safety/GP%20180%20-%20Loctite%20242%20SDS%20-%20henkel.datasheets.Search.pdf" target="_blank">242 Blue Threadlocker</a></td>
           <td>Loctite 242 Medium Strength Blue Threadlocker is a general purpose, removable threadlocker for fasteners between ¼" and ¾" (6 to 20 mm) diameters.</td>
         </tr>
         <tr>
@@ -275,14 +275,14 @@
           <td>TR 282</td>
           <td>Heat-Sink Compound, 2 oz.</td>
           <td>AOS Thermal Compounds</td>
-          <td><a href="assets/pdf/safety/msds_TR_282.pdf" target="_blank">AOS Thermal Compounds</a></td>
+          <td><a href="assets/pdf/safety/TR%20282-1%20-%20AOSHeatSinkCompound52022SDS2015%20SDS.pdf" target="_blank">AOS Thermal Compounds</a></td>
           <td>A paste-like substance specifically designed to be applied at an interface between a heated surface and the surface of a heat sink. It speeds up the removal of heat from original surface (device) to another (heat sink). The device being cooled will operate more efficiently and the useful lifetime is increased.</td>
         </tr>
         <tr>
           <td>TR 282-1</td>
           <td>Heat-Sink Compound, 1 lb</td>
           <td>AOS Thermal Compounds</td>
-          <td><a href="assets/pdf/safety/msds_TR_282.pdf" target="_blank">AOS Thermal Compounds</a></td>
+          <td><a href="assets/pdf/safety/TR%20282-1%20-%20AOSHeatSinkCompound52022SDS2015%20SDS.pdf" target="_blank">AOS Thermal Compounds</a></td>
           <td>A paste-like substance specifically designed to be applied at an interface between a heated surface and the surface of a heat sink. It speeds up the removal of heat from original surface (device) to another (heat sink). The device being cooled will operate more efficiently and the useful lifetime is increased.</td>
         </tr>
       </tbody>
