FC unobsolete, BTC updates

--- a/technical-reference.html
+++ b/technical-reference.html
@@ -124,6 +124,7 @@
           <a href="#" class="list-group-item header">Tool Obsolescence Notices</a>
           <a href="assets/pdf/reference/legacy/Obsolete_CY.pdf" target="_blank" class="list-group-item">CY Model Tools</a>
           <a href="assets/pdf/reference/legacy/Obsolete_EZ.pdf" target="_blank" class="list-group-item">EZ Model Tools</a>
+          <a href="assets/pdf/reference/legacy/Obsolete_FC.pdf" target="_blank" class="list-group-item">Floor Cleaners</a>
           <a href="assets/pdf/reference/legacy/Obsolete_FO.pdf" target="_blank" class="list-group-item">FO Model Tools</a>
           <a href="assets/pdf/reference/legacy/Obsolete_FS.pdf" target="_blank" class="list-group-item">FS Model Tools</a>
           <a href="assets/pdf/reference/legacy/Obsolete_FT.pdf" target="_blank" class="list-group-item">FT Model Tools</a>
