--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -168,13 +168,12 @@
                   </tr>
                   <tr>
                     <th>Flow Range</th>
-                    <td>5–30 gpm</td>
-                    <td><span class="metric">19–114 l/min</span></td>
+                    <td>5–12 gpm</td>
+                    <td><span class="metric">19–45 l/min</span></td>
                   </tr>
                   <tr>
-                    <th>Hose OD</th>
-                    <td>0.6–1.3 in.</td>
-                    <td><span class="metric">15–33 mm</span></td>
+                    <th>Hose Size</th>
+                    <td colspan="2">5mm, 6mm</td>
                   </tr>
                   <tr>
                     <th>Feed Rate</th>
@@ -184,7 +183,7 @@
                   <tr>
                     <th>Maximum Hose Length</th>
                     <td>75 ft</td>
-                    <td><span class="metric">22 m</spam></td>
+                    <td><span class="metric">22 m</span></td>
                   </tr>
                   <tr>
                     <th>Weight</th>
@@ -227,6 +226,7 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/btc-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BTC-100 Data Sheet</a></li>
+                  <li><a href="../assets/pdf/manuals/BTC-100_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BTC-100 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
