add DGO article to careers (work laptop

--- a/careers.html
+++ b/careers.html
@@ -207,6 +207,7 @@
             <li><a href="http://www.durango.org/" target="_blank">Durango Area Tourism Office</a></li>
             <li><a href="http://www.durangobusiness.org/" target="_blank">Durango Chamber of Commerce</a></li>
             <li><a href="http://www.yeslpc.com/" target="_blank">La Plata County Economic Development Alliance</a></li>
+            <li><a href="http://www.durangotv.com/about.php" target="_blank">Durango TV</a></li>
             <li><a href="http://www.durangoherald.com/article/20110821/NEWS01/708219923/-1/News01/We're-small-but-No-1" target="_blank">Durango Herald: We&#8217;re small but No. 1</a></li>
             <li><a href="http://www.sunset.com/travel/best-places-to-live-and-work/best-places-to-live-and-work_4" target="_blank">Sunset Magazine: Best places to live at any age</a></li>
             <li><a href="http://www.outsideonline.com/adventure-travel/best-towns/Durango-Colorado.html" target="_blank">Outside Magazine: Best Towns 2011</a></li>
