--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -218,7 +218,7 @@
           <td>GP 047</td>
           <td>Thread Sealant, 4 oz.</td>
           <td>Parker</td>
-          <td><a href="assets/pdf/safety/THREADMATE-II-Thread-Mate-Anti-Gale-MTM04T.pdf" target="_blank">Threadmate II</a></td>
+          <td><a href="assets/pdf/safety/GP%20047-THREADMATE%20II.pdf" target="_blank">Threadmate II</a></td>
           <td>Threadmate&trade; is an extreme-duty lubricant developed to reduce irritation during the assembly of pipe thread fittings. It promotes reliable sealing of pipe threads, even at high pressures. Threadmate is recommended for use on stainless steel pipe threads.</td>
         </tr>
         <tr>
